--- a/src/locales/ru/token.json
+++ b/src/locales/ru/token.json
@@ -1,67 +1,67 @@
 {
   "token": {
     "siteMetadata": {
-      "title": "Token",
-      "description": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency."
+      "title": "Токен",
+      "description": "Участники наших тестнетов теперь могут зарабатывать тестовые токены сети Joystream (tJOY), поддерживаемые фиатной валютой."
     },
     "hero": {
-      "title": "Understanding the tJOY token",
-      "text": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency.",
+      "title": "Понятие токена tJOY",
+      "text": "Участники наших тестнетов теперь могут зарабатывать тестовые токены сети Joystream (tJOY), поддерживаемые фиатной валютой.",
       "tokenStats": {
-        "title": "Token in numbers",
-        "exchangeRate": "Exchange Rate",
-        "backingValue": "Backing Value",
-        "supply": "Supply"
+        "title": "Токены в цифрах",
+        "exchangeRate": "Обменный Курс",
+        "backingValue": "Значение обеспечения",
+        "supply": "Обеспечение"
       }
     },
     "faq": {
-      "title": "Testnet Token Information",
+      "title": "Информация о токенах тестнета",
       "whatIsTJoy": {
-        "title": "What is tJOY?",
-        "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
+        "title": "Что такое tJOY?",
+        "text": "tJOY (testJOY) валюта, используемая для поощрения в тестнетах Joystream."
       },
       "tJoyValueOrigin": {
-        "title": "Where does the value of tJOY come from?",
-        "text": "Jsgenesis, the team behind the Joystream project, have linked the total supply of tJOYs to a corresponding pool of fiat currency (USD) held by the company. All testnet participants can redeem their tJOY for USD at any time."
+        "title": "Чем обеспечаны tJOY?",
+        "text": "Команда Jsgenesis, стоящая за проектом Joystream, связала общее количество tJOY с соответствующим пулом фиатной валюты (USD), принадлежащим компании. Все участники тестовой сети могут обменять свои tJOY на доллары в любое время."
       },
       "purposeOfTJoy": {
-        "title": "What is the purpose of tJOY?",
-        "text": "tJOY can be used on our testnets in the same ways that future users of the Joystream platform will be able to use the mainnet JOY token. The three principal functions of tJOY are in staking, governance and for payment.<0/><0/> For example, to participate in testnet roles, users may need to stake tJOY. To create governance proposals and vote for Council Members, tJOY is also required. Finally, on the testnet, bounties and KPIs require tJOYs for paying effective contributors."
+        "title": "Какова цель tJOY?",
+        "text": "tJOY можно использовать в наших тестнетах так же, как будущие пользователи платформы Joystream смогут использовать токен JOY в основной сети. Три основных функции tJOY - это стейкинг, управление и оплата. <0/> <0/> Например, для участия в ролях тестнета пользователям может потребоваться стейкинг (stake) tJOY. Для создания предложений по управлению и голосования за членов Совета также требуется tJOY. Наконец, для выполнения грантов и KPI tJOY используются для выплаты членам, которые вносят активный вклад."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Where can I get tJOY?",
-        "text": "There are many opportunities to obtain tJOY. Smaller amounts can be requested in our community channels (including our Discord server and on-chain forum), while larger sums can be accumulated by participating in bounties, competitions and other events."
+        "title": "Как можно получить tJOY?",
+        "text": "Есть много возможностей получить tJOY. Меньшие суммы можно запросить на наших каналах сообщества (включая наш сервер Discord и форум), а большие суммы можно накопить, участвуя в грантах, конкурсах и других мероприятиях."
       },
       "linkBetweenTJoyAndFutureToken": {
-        "title": "Is there any link between tJOY and the future mainnet token?",
-        "text": "There is no direct link between tJOY and mainnet JOY. We are using tJOY to simulate the real economic incentives present on mainnet to aid the platform's development and facilitate the growth and education of our community in preparation of the transition from testnet to mainnet."
+        "title": "Существует ли связь между tJOY и будущими токенами основной сети?",
+        "text": "Нет прямой связи между tJOY и JOY. Мы используем tJOY для моделирования реальных экономических стимулов, присутствующих в основной сети, чтобы способствовать развитию платформы и способствовать росту и обучению нашего сообщества при подготовке перехода от тестнета к реальной работе."
       },
       "howToCashout": {
-        "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "title": "Как обналичить tJOY в USD?",
+        "text": "Мы используем Bitcoin Cash (BCH) в качестве средства оплаты в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на выделенный адрес: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Перед тем как это сделать, вы должны установить <0>memo</0> ключа, с которого осуществляется перевод на ваш адрес BCH. Мы фиксируем курс BCH/USD на момент осуществления перевода. <1/><1/>С детальной информацией можно ознакомиться <2>здесь</2>."
       },
       "howToEarn": {
-        "title": "How can I earn mainnet JOY?",
-        "text": "Currently, the only way to secure an allocation of mainnet JOY is through high-quality contributions to the platform and community via our <0>Founding Member Program</0>."
+        "title": "Как можно заработать токены основной сети JOY?",
+        "text": "В настоящее время единственный способ обеспечить распределение JOY в основной сети - это качественный вклад в платформу и сообщество через нашу <0>Программу для членов-учредителей</0>."
       },
       "TJoyWorth": {
-        "title": "How much is tJOY worth?",
-        "text": "You can check the live exchange rate (tJOY->USD) on this page (see above)."
+        "title": "Сколько стоит tJOY?",
+        "text": "Курс обмена (tJOY->USD) можно посмотреть на этой странице (см. выше)."
       }
     },
     "cashouts": {
-      "title": "Pending cashouts",
-      "subtitle": "Tokens sent to Jsgenesis in this exchange are burned, hence the final price of the token is unaffected by such an exchange.",
+      "title": "Ожидаемые выплаты",
+      "subtitle": "Токены, отправленные Jsgenesis на обмен, будут утилизированы, т.к. конечная стоимость токенов должна остаться неизменной при таком обмене.",
       "cashout": {
-        "address": "Source address",
-        "tokensTransferred": "Tokens transferred",
-        "usdValue": "USD Value",
-        "blockNumber": "Block Number",
-        "exchangeNumber": "Exchange #"
+        "address": "Адрес отправителя",
+        "tokensTransferred": "Отправленные токены",
+        "usdValue": "USD",
+        "blockNumber": "Номер блока",
+        "exchangeNumber": "Обмен №"
       }
     },
     "cta": {
-      "title": "Join our Discord and change the online video industry"
+      "title": "Присоединяйся к  нашему Discord и измени индустрию видео сервисов"
     }
   }
 }
