--- a/src/locales/ru/manifesto.json
+++ b/src/locales/ru/manifesto.json
@@ -1,72 +1,72 @@
 {
   "manifesto": {
     "siteMetadata": {
-      "description": "Read the Joystream Manifesto"
+      "description": "Читай Манифест Joystream"
     },
     "hero": {
-      "title": "The Joystream Manifesto",
-      "text": "Our Manifesto sets out both the problems we believe are associated with digital media platforms in their current form as well as our proposed solution to these concerns."
+      "title": "Манифест Joystream",
+      "text": "В нашем Манифесте изложены как проблемы, которые, с нашей точки зрения, связаны с платформами цифровых медиа в их нынешней форме, так и предлагаемое нами решение этих проблем."
     },
     "problem": {
-      "title": "Problem",
+      "title": "Проблема",
       "text": {
-        "artAsTool": "We believe that art, be it as literature, music, film, games or performance, is a critical tool through which societies establish a shared understanding of what is common knowledge among all members. These expressions define values and narratives that end up shaping culture, faith and even public policy. It therefore matters deeply how it is financed, distributed and paid for.",
-        "mediaAsPrimaryMedium": "Digital media has become the primary medium through which such expression is distributed, and digital media platforms have become the key institutions organizing this activity.",
-        "unaccountableInstitutions": "Unfortunately, due to network effects, economies of scale, regulations and political interests, we are today left with handful of massive institutions which set the terms for how this happens. They are almost entirely unaccountable to normal market and political mechanisms.",
-        "filteredOnTheirTerms": "As a result, our stories, expressions and interactions are managed and filtered on their terms. This continues to generate an ever changing set of problems, be it",
-        "inflexible": "inflexible monetization, censorship of controversial speech, inequitable sharing of gains with creators and audience, low platform innovation or lack of credibility with third party developers."
+        "artAsTool": "Мы считаем, что искусство, будь то литература, музыка, фильмы, игры или представления, является важным инструментом, с помощью которого общества устанавливают общее понимание того, что является общим знанием среди всех членов. Эти выражения определяют ценности, и эти повествования, в конечном итоге, формируют культуру, веру и даже государственную политику. Поэтому очень важно, как они финансируется, распространяются и оплачиваются.",
+        "mediaAsPrimaryMedium": "Цифровые медиа стали основным средством распространения таких \"повествований\", а цифровые медиа-платформы стали ключевыми центрами, формирующими их активность.",
+        "unaccountableInstitutions": "К сожалению, из-за эффектов связанных с логикой работы сети, а также по характеру экономического масштабирования, государственных регуляций и политических интересов сегодня у нас осталось всего несколько крупных игроков, которые устанавливают условия того, как все происходит. Они почти полностью неподотчетны нормальным рыночным и политическим механизмам.",
+        "filteredOnTheirTerms": "В результате этого наши высказывания, истории, и взаимодействия управляются и фильтруются на их условиях. Это продолжает порождать целый набор проблем, будь то",
+        "inflexible": "негибкая монетизация, цензура спорных высказываний, несправедливое разделение прибыли с создателями и аудиторией, низкий уровень инноваций платформ или отсутствие доверия со стороны сторонних разработчиков."
       }
     },
     "goal": {
-      "title": "Goal",
+      "title": "Цель",
       "text": {
-        "arrangement": "We call for an arrangement where media platforms are accountable to the people they impact, which are primarily their users, be it as consumers, creatives, third party developer or workers.",
-        "accountability": "It is the absence of such accountability which is the fundamental source of any particular problem at any particular time."
+        "arrangement": "Мы призываем к договоренности, в которой медиа-платформы будут нести ответственность перед людьми, на которых они воздействуют, которые, в первую очередь, являются их пользователями, будь то потребители, креативщики, сторонние разработчики или сотрудники.",
+        "accountability": "Именно отсутствие такой ответственности является фундаментальным источником любой конкретной проблемы в любой конкретный момент."
       }
     },
     "thesis": {
-      "title": "Thesis",
+      "title": "Основной тезис",
       "text": {
-        "coreThesis": "Our core thesis is that there are two basic challenges which must be addressed to achieve this goal, and that an appropriate application of contemporary distributed systems technology, including blockchains, smart contracts and tokens, is the right means to do so."
+        "coreThesis": "Наш основной тезис заключается в том, что для достижения этой цели необходимо решить две основные проблемы, и что правильным средством для этого является соответствующее применение современных технологий распределенных систем, включая блокчейны, смарт-контракты и токены."
       }
     },
     "wedge": {
-      "title": "The Wedge",
+      "title": "Камни Предкновения",
       "text": {
-        "alternative": "First is the question of how to create an alternative from scratch in the face of platform externalities which make any new platform nearly useless, regardless of any of its inherent characteristics. The process of doing this sort of bootstrapping has historically been mostly an art, where success has rarely been reproducible.",
-        "blockchainTokens": "We believe that blockchain tokens, earned by and issued to early participants, have been shown to be extremely effective at mobilizing, integrating and motivating an international and dynamic community.",
-        "initialHurdle": "This has now repeatedly allowed nascent communities, like the Bitcoin community, to overcome the initial network effect hurdle [1, 2, 3]. There is no certainty that this will be sufficient, but we believe this mechanism is as promising as anything which is likely to have a chance in a long time."
+        "alternative": "Самое первое, это вопрос о том, как создать альтернативу с нуля, принимая во внимание внешне факторы, которые делают любую новую платформу практически бесполезной, независимо от каких-либо присущих ей характеристик. Процесс такого создания, если посмотреть на историю, был в основном чем-то подобным искусству, где успех вряд-ли можно повторить, выполняя аналогичные шаги.",
+        "blockchainTokens": "Мы считаем, что токены блокчейна, заработанные и выпущенные ранним участникам, показали свою чрезвычайно эффективную мобилизационную эффективность, сплочая и мотивируя динамическое интернациональное сообщество.",
+        "initialHurdle": "Эта схема уже неоднократно помогала зарождающимся сообществам, такими как Биокойн (Bitcoin) преодолеть начальное препятствие сети. И несмотря на то, что нет уверенности в том, что этого будет достаточно, мы считаем этот механизм многообещающим в долгосрочной перспективе."
       }
     },
     "accountability": {
-      "title": "Accountability at scale",
+      "title": "Отчетность в Масштабе",
       "text": {
-        "createAndSustain": "Second is the question of how to create and sustain accountability in such a platform when it actually reaches scale.",
-        "twoWays": "We understand there to be two fundamental ways that participants can hold institutions of any kind accountable: Voice and exit, in the tradition of Hirschman A. O. [4]."
+        "createAndSustain": "Вторым является вопрос о том, как создать и поддерживать отчетность в такой платформе, когда она действительно достигает больших масштабов.",
+        "twoWays": "Мы понимаем, что существует два основных способа, которыми участники могут привлекать к ответственности структуры любого рода: голос и выход, в согласно Хиршману А. О. [4]."
       }
     },
     "voice": {
-      "title": "Voice",
+      "title": "Голос",
       "text": {
-        "improveWithin": "Voice is the approach of attempting to improve or reform the functioning of an institution from within. The effectiveness of this depends on some capacity to both share reliable information with other members, and have some impact on internal governance processes. Current media platforms provide users no effective way of doing either.",
-        "infrastructure": "We believe that blockchains provide an organizational and economic infrastructure which can address both problems. The public, verifiable and immutable history of economic and administrative records, provides an excellent basis for users to understand the current and past state of the platform. This allows anyone to make incontestable claims about relevant facts and circumstances.",
-        "control": "Further, blockchain tokens allow us to make use and control of a platform inseparable, giving users an automatic seat at the table in deliberating over platform level decisions.",
-        "signWithCrypto": "All that is required to establish, exercise or transfer the capacity to participate in such activity, is the ability to sign messages with identifiable cryptographic keys. Perfectly reliable contracting gives a large, dynamic and unrestricted set of users the means of governing the platform. This can serve a wide range of purposes, such as undertaking projects, regulating participation in different formally specified roles, or even updating the institutional rules themselves. This integration of reliable contracting into the economic rails provides an organizational infrastructure much more in line with our objectives of inclusive control than the normal jurisdictional trust based infrastructure."
+        "improveWithin": "Голос - это попытка улучшить или реформировать функционирование структуру изнутри. Эффективность этого зависит от некоторой способности как делиться надежной информацией с другими членами, так и иметь определенное влияние на процессы внутреннего управления. Текущие медиа-платформы не предоставляют пользователям эффективных способов сделать это.",
+        "infrastructure": "Мы считаем, что блокчейны обеспечивают организационную и экономическую инфраструктуру, которая может решить обе проблемы. Публичная, поддающаяся проверке и неизменяемая история экономических и административных записей предоставляет пользователям отличную основу для понимания текущего и прошлого состояния платформы. Это позволяет любому делать неопровержимые утверждения о соответствующих фактах и обстоятельствах.",
+        "control": "Кроме того, токены блокчейна позволяют нам использовать платформу и управлять ею полностью, предоставляя пользователям автоматическое место за столом для обсуждения решений на уровне платформы.",
+        "signWithCrypto": "Все, что требуется для создания, реализации или передачи способности участвовать в такой деятельности, - это возможность подписывать сообщения идентифицируемыми криптографическими ключами. Совершенно надежное заключение контрактов дает широкому, динамичному и неограниченному кругу пользователей средства управления платформой. Это может служить широкому кругу целей, таких как реализация проектов, регулирование участия в различных официально определенных ролях или даже обновление самих правил платформы. Именно такая интеграция надежных контрактов в экономические рельсы обеспечивает организационную инфраструктуру, которая больше соответствует нашим целям всеобъемлющего контроля, чем обычная инфраструктура, основанная на доверительном управлении."
       }
     },
     "exit": {
-      "title": "Exit",
+      "title": "Выход",
       "text": {
-        "exit": "Exit is the approach of entirely ending participation in an institution in favor of either joining or creating an alternative. The effectiveness of this depends on costs of leaving, and either joining or creating an alternative, all being low compared to the deprivation in the existing institution. This is currently not the case.",
-        "loweredCosts": "By building platforms based on free & open source software, open protocols and open data — as is the case with Blockchain systems, one dramatically lowers these costs. Since users control their own data, identity and assets, they have a much easier time joining new platforms, and even taking their peers with them.",
-        "competition": "Open protocols and data will make multi homing interfaces abundant, where users may not even need to switch, but instead use multiple platforms simultaneously, which encourages platform level competition [5].",
-        "reusability": "Even more dramatically, reliance on open source means that all the software capital of a platform can easily be reused, and since the entire organizational state is also public, entire ecosystems can be forked to create new alternative platforms with modified policies and objectives."
+        "exit": "Выход - это подход, при котором участие в структуре полностью прекращается в пользу присоединения или создания альтернативы. Эффективность этого зависит от затрат на уход, а также от присоединения или создания альтернативы, при этом все они низки по сравнению с лишениями, переносимыми в существующей структуре. В настоящее время это не так.",
+        "loweredCosts": "Создавая платформы на основе бесплатного программного обеспечения с открытым исходным кодом, открытых протоколов и открытых данных - как в случае с системами Blockchain, можно значительно снизить эти затраты. Поскольку пользователи контролируют свои собственные данные, идентификационные данные и активы, им намного проще присоединяться к новым платформам и даже брать с собой своих коллег.",
+        "competition": "Открытые протоколы и структуры данных создают изобилие интерфейсов с множественными адресами, где пользователям может даже не потребоваться переключаться между платформами, а вместо этого будет возможность использовать несколько платформ одновременно, что стимулирует конкуренцию на уровне платформ [5].",
+        "reusability": "Более того, использование открытого исходного кода означает, что весь программный капитал платформы можно легко повторно использовать, а поскольку все организационное состояние также является общедоступным, целые экосистемы могут быть разветвлены для создания новых альтернативных платформ с измененными политиками и целями."
       }
     },
-    "ctaText": "This plan still has room for more people, so get involved by sending an <0>email</0> or joining us on <1>Discord</1> or <2>Reddit</2>.",
+    "ctaText": "В этой задумке еще есть место для большего количества людей, поэтому есть возможность принять участие, отправив <0>email</0> присоединиться в <1>Discord</1> или <2>Reddit</2>.",
     "references": {
-      "title": "References",
-      "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. Aug 1, 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. May 27, 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Responses to decline in firms, organizations, and states. Vol. 25. Harvard university press, 1970.</0><0>[5] Rochet, Jean‐Charles, and Jean Tirole. “Platform competition in two‐sided markets.” Journal of the european economic association 1.4 (2003): 990–1029.</0>"
+      "title": "Ссылки",
+      "text": "<0>[1] Эрсам, Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон, К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман, Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше, Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
     }
   }
 }
