--- a/src/locales/ru/rome.json
+++ b/src/locales/ru/rome.json
@@ -1,59 +1,59 @@
 {
   "rome": {
     "siteMetadata": {
-      "description": "Explore the Rome testnet"
+      "description": "Изучаем тестнет Rome"
     },
     "hero": {
-      "title": "Rome Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "title": "Сеть Rome",
+      "text": "Изучай доступные варианты участия и выбирай те, которые тебе больше всего подходят. Влияй на развитие платформы и зарабатывай при этом реальные деньги.",
+      "chipText": "Что это?"
     },
     "heroCard": {
-      "title": "REPLACED BY CONSTANTINOPLE ON"
+      "title": "ЗАМЕЩЕН CONSTANTINOPLE "
     },
     "modal": {
-      "title": "Rome",
-      "text": "<0>The Roman empire left many landmarks.</0> Their architecture and engineering skills was unparalleled during their might. The concept of aqueducts was not devised by the Romans, but their beauty and extent is."
+      "title": "Рим",
+      "text": "<0>Римская империя оставила богатое наследие.</0> Их архитектурные и инженерные навыки не имели себе равных во время их расцвета. Идея акведуков не была изобретена римлянами, но их красота и протяженность поражают."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Важная документация",
       "fullSpecifications": {
-        "title": "Full Specifications",
-        "text": "No specifications were published for Rome."
+        "title": "Полные характеристики",
+        "text": "Характеристики к тестнету Rome не были опубликованы."
       },
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Релиз план",
+        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
+      "title": "Цели Тестнета",
+      "subtitle": "Приведенные ниже цели представляют собой упрощенное представление ключевых результатов, перечисленных в нашем релизе <0>OKR</0>",
       "goals": {
         "contentDirectory": {
-          "title": "Build a dynamic, flexible and user friendly content directory",
-          "text": "The Rome testnet is built around the introduction of a new content directory, that can be added to, modified and improved without requiring runtime upgrades. All key results and goals are derived from this."
+          "title": "Создание динамического, гибкого и удобного каталога содержимого",
+          "text": "Тестнет Rome построен на введении нового каталога содержимого, который можно расширять, изменять и улучшать без необходимости обновлять среду выполнения. Из этого вытекают все ключевые цели и результаты."
         },
         "content": {
-          "title": "Populate the content directory with a variety of content",
-          "text": "Rome introduces a Content Directory system that is both built to last, yet still meant to be continuously improved on. We will pay for Content Creators to upload a variety of content and we hope to learn a lot from the results."
+          "title": "Заполнение каталога разнообразным содержимым",
+          "text": "Rome вносит понятие системы Content Directory, которая рассчитана на длительный срок службы, но при этом должна постоянно улучшаться. Мы будем платить создателям контента за загрузку разнообразного контента и надеемся многому научиться на результатах."
         },
         "contentCurator": {
-          "title": "Introduce the new Content Curator role",
-          "text": "With a new Content Directory, and incentives to upload content, we need monitoring. The Content Curators will require staking, and will be paid in both testnet tokens and Monero."
+          "title": "Введение новой роли Контент Куратора",
+          "text": "Наряду с новым каталогом и стимуляцией загрузки контента нам необходим мониторинг. Чтобы стать Куратором контента, необходимо выполнить процедуру стейнинг (staking), и кураторы будут получать оплату как в токенах тестнета, так и в Monero."
         },
         "contentCreator": {
-          "title": "Add Content Creator profiles",
-          "text": "Without Content Creators, there won't be any content. Granted, adding another level on top of the membership requirement may seem like a hurdle, but it will allow users to upload with multiple profiles."
+          "title": "Добавление профилей Создателей Контента",
+          "text": "Без Создателей Контента не было бы никакого контента. Конечно, добавление еще одного уровня к членству может показаться определенным препятствием, но это позволит пользователям выполнять загрузки контента, используя несколько профилей."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Rome Network"
+      "title": "Спонсируемые роли в сети Rome"
     },
     "map": {
-      "title": "Rome",
-      "text": "<0>Rome was the capital of the great Roman Empire during its peak.</0> As with previous testnet names, the Roman Empire and Rome was another important step in the rise of democracy, the rule of law, and modern governance structures.<1/><1/><2><0/> Explore current testnet</2>"
+      "title": "Рим",
+      "text": "<0>Рим был столицей великой Римской империи в период ее расцвета.</0> Как и в случае с предыдущими названиями тестнетов, Римская империя и Рим стали еще одним важным шагом в подъеме демократии, верховенства закона и современных структур управления.<1/><1/><2><0/> Изучить текущий тестнет</2>"
     }
   }
 }
