--- a/src/locales/ru/sumer.json
+++ b/src/locales/ru/sumer.json
@@ -1,47 +1,47 @@
 {
   "sumer": {
     "siteMetadata": {
-      "description": "Explore the Sumer testnet"
+      "description": "Изучаем тестнет Sumer"
     },
     "hero": {
-      "title": "Sumer Network",
-      "text": "Among other changes, the Sumer testnet release offers major improvements to content uploads through our playback app."
+      "title": "Сеть Sumer",
+      "text": "Среди других изменений выпуск тестнета Sumer предлагает значительные улучшения в процессе загрузки контента через наше приложение для воспроизведения."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Важная документация",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Релиз план",
+        "text": "Изучи релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Sumer testnet and its objectives."
+        "title": "Объявление в блоге",
+        "text": "Изучи краткое руководство по тестнету Sumer и его целям."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Sumer testnet.",
+      "title": "Цели Тестнета",
+      "subtitle": "Приведенные ниже цели представляют собой упрощенное представление ключевых результатов тестнета Sumer",
       "goals": {
         "contentPublishing": {
-          "title": "Enable content publishing from playback interface",
-          "text": "Sumer introduces the ability to create and manage channels and videos in the Joystream Player, replacing the cumbersome and technically challenging CLI-dependent process required on the Antioch testnet."
+          "title": "Сделать доступным публикацию контента из интерфейса для воспроизведения.",
+          "text": "Sumer представляет возможность создавать каналы и видео и управлять ими в Joystream Player, заменяя громоздкий и сложный процесс публикации, который требует работы с интерфейсом командной строки, которым необходимо было пользоваться в теснете Antioch."
         },
         "deployingNewContentDirectory": {
-          "title": "Deploying the new content directory",
-          "text": "As part of Sumer we will be introducing a simple native runtime module. This is because technical complexities and tradeoffs associated with the previous iterations of the content directory were not acceptable."
+          "title": "Публикация нового каталога данных",
+          "text": "В рамках Sumer мы предоставляем простой встроенный модуль времени выполнения. Это связано с тем, что технические сложности и необходимость компромиссов, в предыдущих итерациях развития каталога были неприемлемы."
         },
         "enableBuilderRole": {
-          "title": "Enable builder/platform operations role",
-          "text": "We are introducing a new working group focused on platform operations. Originally, we had also planned to enable the new \"Gateway\" role, though this is no longer in the scope of the Sumer release."
+          "title": "Подключения роли строителя платформы",
+          "text": "Мы представляем новую рабочую группу, специализирующуюся на работе с платформамой. Первоначально мы также планировали включить новую роль \"Шлюз\", хотя это не вошло в выпуск Sumer."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Sumer Network"
+      "title": "Спонсируемые роли в сети Sumer"
     },
     "map": {
-      "title": "Sumer",
-      "text": "<0>Sumer is the earliest known civilization in the historical region of southern Mesopotamia</0>, emerging during the Chalcolithic and early Bronze Ages between the sixth and fifth millennium BC.<1/><1/>Living along the valleys of the Tigris and Euphrates, Sumerian farmers grew an abundance of grain and other crops, the surplus from which enabled them to form urban settlements. The region is thought to be where the earliest forms of writing emerged.<1/><1/><2><0/> Read the blog post</2>"
+      "title": "Шумеры",
+      "text": "<0>Шумеры - самая ранняя известная цивилизация в историческом регионе южной Месопотамии</0>, возникшие в эпоху энеолита и ранней бронзы между шестым и пятым тысячелетиями до н.э.<1/><1/>Живя в долинах Тигра и Евфрата, шумерские земледельцы выращивали множество зерновых и других культур, излишки которых позволяли им создавать городские поселения. Считается, что именно в этом регионе возникли самые ранние формы письменности.<1/><1/><2><0/> Читать в блоге</2>"
     }
   }
 }
